--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bz": "~0.2.5",
     "ini": "~1.1.0",
-    "github": "~0.1.10"
+    "github": "~0.1.10",
+    "debug": "~0.7.2"
   }
 }
