--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "bz": "~0.2.5",
     "github": "~0.1.10",
     "debug": "~0.7.2"
+  },
+  "devDependencies": {
+    "mocha": "~1.12.1"
   }
 }
